--- a/self-hosted/production-satellite.mdx
+++ b/self-hosted/production-satellite.mdx
@@ -20,9 +20,10 @@ For **development or single-team** usage, the [Docker Compose setup](/self-hoste
 
 Production satellites provide enterprise-grade security through:
 
-- **nsjail Process Isolation**: Complete process separation per team with Linux namespaces
-- **Resource Limits**: CPU, memory, and process limits per MCP server (2GB RAM, 60s CPU, 1000 processes)
-- **Filesystem Jailing**: Read-only system directories, isolated writable spaces
+- **nsjail Process Isolation**: Complete process separation per team with Linux namespaces and cgroup enforcement
+- **Resource Limits**: CPU, memory, and process limits per MCP server (512MB physical RAM via cgroup, 2GB virtual RAM via rlimit, 60s CPU, 1000 processes)
+- **Multi-Runtime Support**: Node.js (npx) and Python (uvx) with runtime-aware isolation
+- **Filesystem Jailing**: Read-only system directories, isolated writable spaces per runtime
 - **Non-Root Execution**: Satellite runs as dedicated `deploystack` user
 - **Audit Logging**: Complete activity tracking with automatic rotation
 
@@ -84,6 +85,26 @@ sudo apt-get install -y nodejs
 node --version  # Should show v24.x.x
 npm --version
 ```
+
+### Install Python and UV
+
+DeployStack Satellite supports Python MCP servers via `uvx` (UV package runner).
+
+```bash
+# Install Python 3
+sudo apt-get install -y python3 python3-pip
+
+# Install UV (Python package manager)
+curl -LsSf https://astral.sh/uv/install.sh | sh
+
+# Verify installation
+python3 --version  # Should show Python 3.x
+uvx --version      # Should show uvx version
+```
+
+<Info>
+**Python Runtime Support**: The satellite automatically detects Python MCP servers and spawns them using `uvx` with runtime-aware isolation. Python and Node.js servers run in separate cache directories for complete isolation.
+</Info>
 
 ### Install nsjail
 
@@ -222,9 +243,45 @@ ls -la dist/index.js  # Should exist
 ### Create MCP Cache Directory
 
 ```bash
-# Create cache directory for MCP server packages
+# Create cache directory for MCP server packages (runtime-specific subdirectories created automatically)
 mkdir -p /opt/deploystack/mcp-cache
 ```
+
+<Info>
+**Runtime-Aware Caching**: The satellite automatically creates runtime-specific cache directories:
+- `/opt/deploystack/mcp-cache/node/{team_id}` - Node.js packages (npm)
+- `/opt/deploystack/mcp-cache/python/{team_id}` - Python packages (UV)
+
+This ensures complete isolation between different runtimes and teams.
+</Info>
+
+### Create GitHub Deployment Base Directory
+
+```bash
+# Create base directory for GitHub-based MCP server deployments
+# Required for tmpfs isolation of GitHub repository installations
+mkdir -p /opt/mcp-deployments
+chown deploystack:deploystack /opt/mcp-deployments
+chmod 755 /opt/mcp-deployments
+```
+
+<Warning>
+**Critical Requirement**: This directory is required for GitHub-based MCP server installations. Without it, the satellite will fail to start in production mode with a clear error message:
+```
+❌ FATAL: GitHub deployment base directory does not exist: /opt/mcp-deployments
+Fix: sudo mkdir -p /opt/mcp-deployments && sudo chown deploystack:deploystack /opt/mcp-deployments
+```
+</Warning>
+
+<Info>
+**Why this directory is needed**: When users install MCP servers directly from GitHub repositories (e.g., `github:owner/repo#ref`), the satellite:
+1. Downloads the GitHub tarball
+2. Creates a tmpfs mount at `/opt/mcp-deployments/{team_id}/{installation_id}`
+3. Extracts the code into the tmpfs mount (300MB size limit)
+4. Builds and runs the MCP server in isolated memory
+
+This approach provides secure, isolated execution for GitHub-sourced MCP servers without polluting the filesystem.
+</Info>
 
 ### Configure Environment
 
@@ -270,12 +327,14 @@ EVENT_BATCH_INTERVAL_MS=3000
 EVENT_MAX_BATCH_SIZE=100
 
 # nsjail Resource Limits
-NSJAIL_MEMORY_LIMIT_MB=2048
-NSJAIL_CPU_TIME_LIMIT_SECONDS=60
-NSJAIL_MAX_PROCESSES=1000
-NSJAIL_RLIMIT_NOFILE=1024
-NSJAIL_RLIMIT_FSIZE=50
-NSJAIL_TMPFS_SIZE=100M
+NSJAIL_MEMORY_LIMIT_MB=2048              # Virtual memory limit (rlimit fallback)
+NSJAIL_CGROUP_MEM_MAX_BYTES=536870912    # Physical memory limit: 512MB (cgroup)
+NSJAIL_CPU_TIME_LIMIT_SECONDS=60         # CPU time limit
+NSJAIL_MAX_PROCESSES=1000                # Process limit (rlimit)
+NSJAIL_CGROUP_PIDS_MAX=1000              # Process limit (cgroup)
+NSJAIL_RLIMIT_NOFILE=1024                # File descriptor limit
+NSJAIL_RLIMIT_FSIZE=50                   # Max file size in MB
+NSJAIL_TMPFS_SIZE=100M                   # Tmpfs size for /tmp
 
 # Process Idle Timeout (seconds, 0 to disable)
 MCP_PROCESS_IDLE_TIMEOUT_SECONDS=180
@@ -334,6 +393,7 @@ ProtectHome=true
 ReadWritePaths=/opt/deploystack/deploystack/services/satellite/persistent_data
 ReadWritePaths=/var/log/deploystack-satellite
 ReadWritePaths=/opt/deploystack/mcp-cache
+ReadWritePaths=/opt/mcp-deployments
 
 [Install]
 WantedBy=multi-user.target
@@ -483,15 +543,20 @@ Production satellites use nsjail to provide:
 
 Each MCP server process is limited to:
 
-- **Memory**: 2048MB (absolute minimum for Node.js V8)
-- **CPU Time**: 60 seconds
-- **Processes**: 1000 (required for npm operations)
-- **File Descriptors**: 1024
-- **Maximum File Size**: 50MB
+- **Virtual Memory**: 2048MB (enforced via rlimit_as)
+- **CPU Time**: 60 seconds (enforced via rlimit_cpu)
+- **Processes**: 1000 (enforced via rlimit_nproc, required for package managers like npm and uvx)
+- **File Descriptors**: 1024 (enforced via rlimit_nofile)
+- **Maximum File Size**: 50MB (enforced via rlimit_fsize)
+- **tmpfs /tmp**: 100MB (enforced via tmpfs mount)
 
 <Warning>
-**Memory Limit Note**: 2048MB is the absolute minimum for Node.js runtime initialization. Do not reduce this value below 2048MB or MCP servers will fail to start.
+**Cgroup Limits Currently Disabled**: Physical memory (512MB) and process count cgroup limits are disabled due to systemd cgroup delegation permissions. The satellite uses rlimit-based resource controls instead, which provide equivalent DoS protection. See the Future Enhancement section below for re-enabling cgroup limits via systemd delegation.
 </Warning>
+
+<Info>
+**Primary Security = Namespace Isolation**: The satellite's security model relies on Linux namespaces (PID, Mount, User, IPC, UTS) to isolate MCP servers from each other and the host system. Resource limits (rlimits) provide secondary DoS protection. With user namespace active, all privilege escalation attacks (including setuid-based rlimit bypasses) are prevented.
+</Info>
 
 ### Network Security
 
@@ -705,6 +770,59 @@ Monitor and plan for:
 - Memory usage per team
 - Log disk usage growth
 - Network bandwidth for backend communication
+
+## Future Enhancement: Enable Cgroup Limits
+
+Currently, cgroup limits are disabled due to systemd cgroup delegation permissions. To re-enable precise physical memory (512MB) and process count limits in the future:
+
+### 1. Modify Systemd Service File
+
+Edit `/etc/systemd/system/deploystack-satellite.service` and add `Delegate=yes`:
+
+```ini
+[Service]
+Type=simple
+User=deploystack
+Group=deploystack
+Delegate=yes  # ← ADD THIS LINE
+WorkingDirectory=/opt/deploystack/deploystack/services/satellite
+...
+```
+
+### 2. Reload and Restart Service
+
+```bash
+sudo systemctl daemon-reload
+sudo systemctl restart deploystack-satellite
+```
+
+### 3. Update Satellite Code
+
+The satellite code will need to be updated to re-enable cgroup v2 flags:
+- `--use_cgroupv2`
+- `--cgroupv2_mount /sys/fs/cgroup`
+- `--cgroup_mem_max 536870912` (512MB)
+- `--cgroup_pids_max 1000`
+
+Contact DeployStack support or check the GitHub repository for updated releases that support cgroup delegation.
+
+### 4. Verify Cgroup Limits
+
+After restart, verify cgroup limits are active:
+
+```bash
+# Find running MCP process
+ps aux | grep "npx.*mcp"
+
+# Check cgroup limits (replace {pid} with actual PID)
+cat /proc/{pid}/cgroup
+cat /sys/fs/cgroup/NSJAIL.*/memory.max
+cat /sys/fs/cgroup/NSJAIL.*/pids.max
+```
+
+<Info>
+**Note**: This enhancement is optional. The current rlimit-based approach provides strong security through namespace isolation and adequate DoS protection. Cgroup limits add precision to resource accounting but don't change the fundamental security model.
+</Info>
 
 ## Next Steps
 
